--- a/scss/devices/brazil/_mobile.scss
+++ b/scss/devices/brazil/_mobile.scss
@@ -1,3 +1,48 @@
-// @media (min-width: $mobile) {
-    
-// }
+@media (min-width: $mobile) {
+    img {
+        width: 30%;
+    }
+
+    figure,
+    figcaption,
+    aside,
+    main > article > section {
+        @include flexColumn;
+    }
+
+    .introduction,
+    .assignments,
+    .packages {
+        @include flexColumn;
+        width: 90%;
+    }
+
+    // INTRODUTION
+    .introduction {
+        padding-top: 10vh;
+
+        > figure {
+            row-gap: 5vh;
+            width: 100%;
+        }
+
+        h1 {
+            text-align: center;
+            font-size: 30px;
+        }
+
+        img {
+            width: 100%;
+        }
+
+        figcaption {
+            row-gap: 4vh;
+            text-align: center;
+            :last-child {
+                color: $mainColor;
+                font-weight: 600;
+            }
+        }
+
+    }
+}
