--- a/scss/devices/thai/_mobile.scss
+++ b/scss/devices/thai/_mobile.scss
@@ -1,6 +1,139 @@
 // MOBILE VERSION
 @media (min-width: $mobile) {
-  
+    main {
+        padding-top: 5vh;
+        row-gap: 10vh;
+    }
+
+    img {
+        width: 40%;
+    }
+
+    .price {
+        width: 100%;
+        row-gap: 5vh;
+        
+               
+        > article {
+            background-image: url("/thai_img/bg-price.jpg");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            height: 30vh;
+
+            > section {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                height: 100%;
+                background-color:rgba(151, 149, 176, 0.8)
+            }
+
+            h2 {
+                color: $mainColor;
+                font-size: 30px;
+                font-weight: 900;
+                text-transform: uppercase;
+            }
+        }
+
+        > section {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            row-gap: 2vh;
+
+            > aside:nth-child(1) {
+                background-color: #a64726;
+                // background-color: #bf3b3a;
+                // background-color: #ff8066;
+                // background-image: linear-gradient(to right top,
+                // #d16ba5,
+                // #c777b9,
+                // #ba83ca,
+                // #aa8fd8,
+                // #9a9ae1,
+                // #8aa7ec,
+                // #79b3f4,
+                // #69bff8,
+                // #52cffe,
+                // #41dfff,
+                // #5ffbf1 );
+            }
+
+            > aside:nth-child(2) {
+                // background-color: #023879;
+                background-color: #17468c;
+            }
+
+            > aside:nth-child(3) {
+                background-color: #006c3d;
+            }
+
+          
+        }
+
+        aside {
+            color: $fontColor;
+            min-height: 40vh;
+            width: 90%;
+            @include flexColumn;
+            @include center;
+            row-gap: 3vh;
+            
+
+            p {
+                color: whitesmoke;
+                width: 80%;
+                text-align: center;
+                font-size: 16px;
+            }
+        }
+
+        i {
+            display: none;
+        }
+
+        h4 {
+            border-bottom: 3px dashed darkblue;
+            padding-bottom: 1vh;
+            font-size: 24px;
+        }
+
+        strong {
+            font-size: 40px;
+            font-weight: 800;
+        }
+
+        a {
+            font-size: 16px;
+            font-weight: 700;
+            color: $aColor;
+            background-color: white;
+            border: none;
+            width: 50%;
+            padding: 1vh;
+            text-align: center;
+
+        }
+
+        h5 {
+            font-size: 16px;
+            background-color: #f9e282;
+            color: #bf3b3a;
+            font-style: italic;
+            width: 100%;
+            padding: 2%;
+            text-align: center;
+
+        }
+
+
+
+        
+    }
 }
 
 
