--- a/scss/devices/korea/_tablet.scss
+++ b/scss/devices/korea/_tablet.scss
@@ -35,6 +35,10 @@
       a {
         width: 35%;
         font-size: 28px;
+        &:hover {
+          color: deepskyblue;
+          background-color: $fontColor;
+        }
       }
     }
   }
@@ -42,14 +46,25 @@
     h2 {
       font-size: 45px;
     }
+    a {
+      &:hover {
+        color: deepskyblue;
+        background-color: $fontColor;
+      }
+    }
     > section {
       > p {
         font-size: 30px;
       }
     }
     > figure {
+      &:hover {
+        background-color: $mainColor;
+        color: $hoverColor;
+      }
       > i {
         font-size: 60px;
+        text-shadow: 10px 10px black;
       }
       h4 {
         font-size: 35px;
@@ -68,11 +83,19 @@
     aside {
       height: 50vh;
       row-gap: 5vh;
+      &:hover {
+        background-color: $strongColor;
+        color: $hoverColor;
+      }
     }
     section {
       > a {
         font-size: 40px;
         height: 100%;
+        &:hover {
+          color: $hoverColor;
+          background-color: $strongColor;
+        }
       }
     }
     > section {
