--- a/scss/devices/home/_mobile.scss
+++ b/scss/devices/home/_mobile.scss
@@ -22,7 +22,7 @@
         }
         
       h6 {
-          border: 1px solid $fontColor;
+          border: 2px solid $strongColor;
           width: 60%;
       }
 
@@ -100,7 +100,8 @@
       }
 
       h3 {
-          color: lightblue;
+          color: lightskyblue;
+          font-size: 20px;
       }
 
       i {
