--- a/scss/shareable/_footer.scss
+++ b/scss/shareable/_footer.scss
@@ -135,18 +135,18 @@
         }
 
         img {
-            width: 40%;
+            width: 35%;
         }
 
         figcaption {
-        > h2 {
-            font-size: 55px;
-            font-weight: 900;
-        }
+            > h2 {
+                font-size: 50px;
+                font-weight: 900;
+            }
 
-        > p {
-            font-size: 26px;
-        }
+            > p {
+                font-size: 26px;
+            }
         }
   
   
@@ -160,14 +160,14 @@
             }
 
             a {
-                font-size: 24px;
+                font-size: 20px;
                 font-weight: 500;
             }
 
         }
   
         h3 {
-            font-size: 30px;
+            font-size: 28px;
         }
   
         section {
@@ -184,15 +184,15 @@
 
         li {
             display: flex;
-            justify-content: center;
+            @include center;
         }
     
         a {
-            font-size: 35px;
-            background-color: whitesmoke;
+            font-size: 30px;
+            background-color: transparent;
             border: 2px solid $aColor;
             border-radius: 50%;
-            padding: 2vh;
+            padding: 1vh;
             transition: .5s;
             &:hover {
                 color: $hoverColor;
@@ -210,7 +210,7 @@
         }
     
         p {
-            font-size: 24px;
+            font-size: 20px;
             font-weight: 500;
         }
     
