--- a/scss/devices/thai/_desktop.scss
+++ b/scss/devices/thai/_desktop.scss
@@ -19,4 +19,172 @@
     .thailand {
         row-gap: 8vh;
     }
+
+
+
+    // INTRODUCE
+    .introduce {
+        > figure {
+            flex-direction: row;
+        }
+
+        h2 {
+            font-size: 55px;
+            width: 80%;
+        }
+
+        img {
+            width: 45%;
+            height: 45vh;
+        }
+
+        small {
+            font-size: 16px;
+            font-weight: 800;
+        }
+
+        a {
+            width: 20%;
+            height: 5vh;
+            transition: .4s;
+            &:hover {
+                color: $hoverColor;
+                background-color: $fontColor;
+            }
+        }
+    }
+
+    .nattar {
+        flex-direction: column;
+        row-gap: 2vh;
+        @include center;
+        width: 70%;
+        
+        > article {
+           width: 100%; 
+        }
+
+        h3 {
+            font-size: 40px;
+        }
+
+        p {
+            font-size: 25px;
+        }
+
+    }
+
+    .languages {
+        width: 50%;
+        padding-top: 2vh;
+        
+        > li {
+            height: 5vh;
+        }
+
+        small {
+            font-size: 14px
+        }
+    }
+
+
+
+    // WEEKLY
+    .weekly {
+        width: 100%;
+        
+        h2 {
+            font-size: 45px;
+            font-weight: 900;
+        }
+
+        p {
+            font-size: 20px;
+        }
+
+        > section {
+            flex-wrap: nowrap;
+            column-gap: 5vh;
+            row-gap: 5vh;
+            width: 95%;
+        }
+
+        figure {
+            width: 45%;
+            height: 45vh;
+        }
+
+        h4 {
+            font-size: 32px;
+            
+        }
+
+        figcaption {
+            transition: .4s;
+            > h3 {
+                font-size: 20px;
+            }
+
+        }
+
+        a {
+            width: 6vh;
+            height: 6vh;
+            transition: .4s;
+
+            &:hover {
+                background-color: whitesmoke;
+                border: none;
+                color: $mainColor;
+            }
+        }
+
+        
+    }
+    
+
+    // PRICE
+    .price {
+        padding-bottom: 8vh;
+        > article {
+            height: 40vh;
+            h2 {
+                font-size: 50px;
+            }
+
+        }
+
+        > section {
+            width: 80%;
+            column-gap: 4vh;
+            > aside {
+                width: 100%;
+                height: 50vh;
+            }
+        }
+
+        h4 {
+            font-size: 28px;
+        }
+
+        strong {
+            font-size: 44px;
+        }
+
+        a {
+            transition: .4s;
+            &:hover {
+                color: $hoverColor;
+                background-color: $mainColor;
+            }
+            
+
+        }
+
+        h5 {
+            font-size: 20px;
+        }
+
+    }
+
 }
