--- a/scss/devices/thai/_tablet.scss
+++ b/scss/devices/thai/_tablet.scss
@@ -153,7 +153,7 @@
                 width: 80%;
                 font-size: 18px;
                 font-weight: 800;
-                color: whitesmoke;
+                color: dimgray;
             }
 
         }
