Tablet: Introduction is done

--- a/scss/devices/brazil/_tablet.scss
+++ b/scss/devices/brazil/_tablet.scss
@@ -12,4 +12,14 @@
       font-size: 40px;
     }
   }
+
+  .introduction {
+      h1 {
+          font-size: 60px;
+      }
+
+      p {
+          font-size: 27px;
+      }
+  }
 }
